@@ -1,5 +1,14 @@
 2014-07-24  Richard Sandiford  <rdsandiford@googlemail.com>
 
+	* rtl.h (target_rtl): Remove lang_dependent_initialized.
+	* toplev.c (initialize_rtl): Don't use it.  Move previously
+	"language-dependent" calls to...
+	(backend_init): ...here.
+	(lang_dependent_init_target): Don't set lang_dependent_initialized.
+	Assert that RTL initialization hasn't happend yet.
+
+2014-07-24  Richard Sandiford  <rdsandiford@googlemail.com>
+
 	PR rtl-optimization/61629
 	* reginfo.c (reinit_regs): Only call ira_init and recog_init if
 	they have already been initialized.
